# accord

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main_test.cpp
src/chords/: CMakeLists.txt  halfsteps.cpp  halfsteps.hpp  tone.cpp  tone.hpp  tone_test.cpp  white.cpp  white.hpp
